--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Capstone Project</title>
-    <link href="styles.css" rel="stylesheet" >
+    <title>Neon Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -19,123 +19,174 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h1>WELCOME TO THE NEON CITY</h1>
-        <div class="hero-image">
-            <img src="Capstone Project Photos/1.jpeg" alt="Neon cityscape with illuminated buildings and reflective streets">
-        </div>
-    </section>
+    <main>
+        <section class="neon">
+            <h1>WELCOME TO THE NEON CITY</h1>
+            <div class="neon-image">
+                <img src="Capstone Project Photos/1.jpeg" alt="Neon cityscape">
+            </div>
+        </section>
 
-    <section id="projects" class="project-grid">
-        <div class="project-card">
-            <img src="Capstone Project Photos/2.jpeg" alt="Neon Dreams - Futuristic cityscape">
-            <h3>Neon Dreams</h3>
-            <p>Web Design</p>
-        </div>
-        <div class="project-card">
-            <img src="Capstone Project Photos/3.jpeg" alt="Cybernetic Systems - Tech interface">
-            <h3>Cybernetic Systems</h3>
-            <p>App Development</p>
-        </div>
-        <div class="project-card">
-            <img src="Capstone Project Photos/4.jpeg" alt="Digital Horizons - Neon grid city">
-            <h3>Digital Horizons</h3>
-            <p>Graphic Design</p>
-        </div>
-        <div class="project-card">
-            <img src="Capstone Project Photos/5.jpeg" alt="Futuristic Utopia - Modern city with river">
-            <h3>Futuristic Utopia</h3>
-            <p>Web Design</p>
-        </div>
-        <div class="project-card">
-            <img src="Capstone Project Photos/6.jpeg" alt="Techno Waves - Neon light grid">
-            <h3>Techno Waves</h3>
-            <p>Motion Design</p>
-        </div>
-        <div class="project-card">
-            <img src="Capstone Project Photos/7.jpeg" alt="Neon Lights - Neon portal street">
-            <h3>Neon Lights</h3>
-            <p>Digital Art</p>
-        </div>
-        <div class="project-card">
-            <img src="Capstone Project Photos/8.jpeg" alt="Cyber City - Night cityscape">
-            <h3>Cyber City</h3>
-            <p>3D Design</p>
-        </div>
-        <div class="project-card">
-            <img src="Capstone Project Photos/9.jpeg" alt="Digital Dreams - Neon triangle portal">
-            <h3>Digital Dreams</h3>
-            <p>UI Design</p>
-        </div>
-        <div class="project-card">
-            <img src="Capstone Project Photos/10.jpeg" alt="Futuristic Visions - Neon city streets">
-            <h3>Futuristic Visions</h3>
-            <p>Concept Art</p>
-        </div>
-    </section>
-<hr>
-    <section class="cool">
-        <h2>READY TO EXPLORE MORE?</h2>
-        <p>Discover my projects and let's create something amazing together.</p>
-        <button class="explore-button">Explore My Projects</button>
-    </section>
-<hr>
-    <section id="about" class="about">
-        <div class="about1">
-            <h2>ABOUT ME</h2>
-        </div>
-        <div class="about2">
-            <p>
-                I am a futuristic designer and developer,
-                blending high-tech aesthetics with a touch
-                of noir. My work spans across web design,
-                app development, and graphic design. Every
-                project is an opportunity to push boundaries
-                and create something extraordinary.
-            </p>
-            
-        </div>
-    </section>
-<hr>
-    <h4>WITH A PASSION FOR CYBERPUNK AND FUTURISTIC DESIGN, I BRING A UNIQUE PERSPECTIVE TO EVERY PROJECT. LET'S CREATE SOMETHING EXTRAORDINARY TOGETHER.</h4>
-</hr>
-    <section class="featured-project">
-        <div class="featured-grid">
-            <img src="Capstone Project Photos/11.jpeg" alt="Featured Project">
-            <div>
-                <h3>FEATURED PROJECT</h3>
-                <p>
-                    Explore my latest project, a futuristic web design
-                    that captures the essence of a neon-lit cityscape.
-                </p>
+        <section class="projects">
+            <div class="project-card">
+                <img src="Capstone Project Photos/2.jpeg" alt="Neon Dreams - Futuristic cityscape">
+                <h3>Neon Dreams</h3>
+                <p>Web Design</p>
             </div>
-        </div>
-    </section>
+            <div class="project-card">
+                <img src="Capstone Project Photos/3.jpeg" alt="Cybernetic Systems - Tech interface">
+                <h3>Cybernetic Systems</h3>
+                <p>App Development</p>
+            </div>
+            <div class="project-card">
+                <img src="Capstone Project Photos/4.jpeg" alt="Digital Horizons - Neon grid city">
+                <h3>Digital Horizons</h3>
+                <p>Graphic Design</p>
+            </div>
+            <div class="project-card">
+                <img src="Capstone Project Photos/5.jpeg" alt="Futuristic Utopia - Modern city with river">
+                <h3>Futuristic Utopia</h3>
+                <p>Web Design</p>
+            </div>
+            <div class="project-card">
+                <img src="Capstone Project Photos/6.jpeg" alt="Techno Waves - Neon light grid">
+                <h3>Techno Waves</h3>
+                <p>Motion Design</p>
+            </div>
+            <div class="project-card">
+                <img src="Capstone Project Photos/7.jpeg" alt="Neon Lights - Neon portal street">
+                <h3>Neon Lights</h3>
+                <p>Digital Art</p>
+            </div>
+            <div class="project-card">
+                <img src="Capstone Project Photos/8.jpeg" alt="Cyber City - Night cityscape">
+                <h3>Cyber City</h3>
+                <p>3D Design</p>
+            </div>
+            <div class="project-card">
+                <img src="Capstone Project Photos/9.jpeg" alt="Digital Dreams - Neon triangle portal">
+                <h3>Digital Dreams</h3>
+                <p>UI Design</p>
+            </div>
+            <div class="project-card">
+                <img src="Capstone Project Photos/10.jpeg" alt="Futuristic Visions - Neon city streets">
+                <h3>Futuristic Visions</h3>
+                <p>Concept Art</p>
+            </div>
+        </section>
+        <hr>
+        <section class="cool">
+            <h2>READY TO EXPLORE MORE?</h2>
+            <p>Discover my projects and let's create something amazing together.</p>
+            <button class="explore-button">Explore My Projects</button>
+        </section>
+        <hr>
+        <section class="about">
+            <div class="about1">
+                <h2>ABOUT ME</h2>
+            </div>
+            <div class="about2">
+                <p>I am a futuristic designer and developer, blending high-tech aesthetics with a touch of noir. My work spans across web design, app development, and graphic design. Every project is an opportunity to push boundaries and create something extraordinary.</p>
+            </div>
+        </section>
+        <hr>
+        <h4 class="statement">WITH A PASSION FOR CYBERPUNK AND FUTURISTIC DESIGN, I BRING A UNIQUE PERSPECTIVE TO EVERY PROJECT. LET'S CREATE SOMETHING EXTRAORDINARY TOGETHER.</h4>
 
-    <section class="services">
-        <h2>MY SERVICES</h2>
+        <section class="big">
+            <div class="big1">
+                <img src="Capstone Project Photos/11.jpeg" alt="Featured Project">
+                <div>
+                    <h3>FEATURED PROJECT</h3>
+                    <p>Explore my latest project, a futuristic web design that captures the essence of a neon-lit cityscape.</p>
+                </div>
+            </div>
+        </section>
 
-        <div class="services-grid">
-            <div class="service-card">
-                <img src="Capstone Project Photos/12.jpeg" alt="Web Design Workspace">
-                <h3>WEB DESIGN</h3>
-                <p>Cutting-edge web design tailored to your needs.</p>
-                <button>Learn More</button>
+        <section class="my_services">
+            <h2>MY SERVICES</h2>
+            <div class="my_services1">
+                <div class="my_service-card">
+                    <img src="Capstone Project Photos/12.jpeg" alt="Web Design Workspace">
+                    <h3>WEB DESIGN</h3>
+                    <p>Cutting-edge web design tailored to your needs.</p>
+                    <button>Learn More</button>
+                </div>
+                <div class="my_service-card">
+                    <img src="Capstone Project Photos/13.jpeg" alt="App Development Interface">
+                    <h3>APP DEVELOPMENT</h3>
+                    <p>Innovative app development for modern solutions.</p>
+                    <button>Learn More</button>
+                </div>
+                <div class="my_service-card">
+                    <img src="Capstone Project Photos/14.jpeg" alt="Motion Design">
+                    <h3>MOTION DESIGN</h3>
+                    <p>Dynamic motion design that brings ideas to life.</p>
+                    <button>Learn More</button>
+                </div>
             </div>
-            <div class="service-card">
-                <img src="Capstone Project Photos/13.jpeg" alt="App Development Interface">
-                <h3>APP DEVELOPMENT</h3>
-                <p>Innovative app development for modern solutions.</p>
-                <button>Learn More</button>
+        </section>
+        <hr>
+
+        <section class="design-philosophy">
+            <h1>I believe in the power of design to transform the digital landscape. My work is inspired by the gritty, neon-lit streets of a futuristic dystopia, where technology and artistry collide.</h1>
+        </section>
+
+        <section class="testimonials">
+            <h2>WHAT MY CLIENTS SAY</h2>
+            <div class="testimonials-grid">
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <img src="Capstone Project Photos/c1.png" alt="Elara Voss">
+                        <div class="testimonial-info">
+                            <h4>Elara Voss</h4>
+                            <span>CEO, Tech Innovators</span>
+                        </div>
+                    </div>
+                    <p>A visionary designer who brings futuristic concepts to life.</p>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <img src="Capstone Project Photos/c2.png" alt="Kai Draven">
+                        <div class="testimonial-info">
+                            <h4>Kai Draven</h4>
+                            <span>Creative Director, Neon Dreams</span>
+                        </div>
+                    </div>
+                    <p>Incredible attention to detail and a unique aesthetic.</p>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <img src="Capstone Project Photos/c3.png" alt="Luna Astra">
+                        <div class="testimonial-info">
+                            <h4>Luna Astra</h4>
+                            <span>Founder, Future Visions</span>
+                        </div>
+                    </div>
+                    <p>A true master of cyberpunk design.</p>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <img src="Capstone Project Photos/c4.png" alt="Orion Blaze">
+                        <div class="testimonial-info">
+                            <h4>Orion Blaze</h4>
+                            <span>Lead Developer, Digital Horizons</span>
+                        </div>
+                    </div>
+                    <p>Remarkable creativity and technical prowess.</p>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <img src="Capstone Project Photos/c5.jpg" alt="Nova Cypher">
+                        <div class="testimonial-info">
+                            <h4>Nova Cypher</h4>
+                            <span>Art Director, Cybernetic Visions</span>
+                        </div>
+                    </div>
+                    <p>Transforms ideas into stunning visual experiences.</p>
+                </div>
             </div>
-            <div class="service-card">
-                <img src="Capstone Project Photos/14.jpeg" alt="Motion Design">
-                <h3>MOTION DESIGN</h3>
-                <p>Dynamic motion design that brings ideas to life.</p>
-                <button>Learn More</button>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <footer>
         <p>© 2023 NEONPORTFOLIO</p>
@@ -143,3 +194,4 @@
     </footer>
 </body>
 </html>
+
